Add option to "remap" colors after a drag-and-drop (related to #563)

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -85,6 +85,7 @@ add_library(app-lib
   cmd/layer_from_background.cpp
   cmd/move_cel.cpp
   cmd/move_layer.cpp
+  cmd/remap_colors.cpp
   cmd/remove_cel.cpp
   cmd/remove_frame.cpp
   cmd/remove_frame_tag.cpp
