Fix flags to use Skia backend on OS X

--- a/src/she/CMakeLists.txt
+++ b/src/she/CMakeLists.txt
@@ -21,7 +21,13 @@ endif()
 if(USE_SKIA_BACKEND)
   set(SKIA_BUILD_DIR "" CACHE PATH "Skia build directory")
 
-  add_definitions(-DSK_INTERNAL -DSK_GAMMA_SRGB -DSK_GAMMA_APPLY_TO_A8 -DSK_SCALAR_TO_FLOAT_EXCLUDED -DSK_ALLOW_STATIC_GLOBAL_INITIALIZERS=1 -DSK_SUPPORT_GPU=1 -DSK_SUPPORT_OPENCL=0 -DSK_FORCE_DISTANCE_FIELD_TEXT=0 -DSK_BUILD_FOR_WIN32 -DGR_GL_FUNCTION_TYPE=__stdcall)
+  add_definitions(-DSK_INTERNAL -DSK_GAMMA_SRGB -DSK_GAMMA_APPLY_TO_A8 -DSK_SCALAR_TO_FLOAT_EXCLUDED -DSK_ALLOW_STATIC_GLOBAL_INITIALIZERS=1 -DSK_SUPPORT_GPU=1 -DSK_SUPPORT_OPENCL=0 -DSK_FORCE_DISTANCE_FIELD_TEXT=0 -DGR_GL_FUNCTION_TYPE=__stdcall)
+  if(WIN32)
+    add_definitions(-DSK_BUILD_FOR_WIN32)
+  elseif(APPLE)
+    add_definitions(-DSK_BUILD_FOR_MAC)
+  endif()
+
   if(CMAKE_BUILD_TYPE STREQUAL Debug)
     set(SKIA_BUILD_OUT_DIR "${SKIA_BUILD_DIR}/out/Debug")
     add_definitions(-DSK_DEVELOPER=1)
