Change the way crash sessions are stored on disk
Changes:
* Move classes related to data recovery into app/crash/ directory/namespace
* Rename app::Backup to app::crash::Session
* Rename app::DataRecovery to app::crash::DataRecovery
* Add base::list_files()
* Add base::get_current_process_id() and base::is_process_running()
* Remove base::TempDir
* Save one session for each running process
* Remove sessions that are empty when the program starts

--- a/src/base/CMakeLists.txt
+++ b/src/base/CMakeLists.txt
@@ -64,6 +64,7 @@ set(BASE_SOURCES
   memory_dump.cpp
   mutex.cpp
   path.cpp
+  process.cpp
   program_options.cpp
   replace_string.cpp
   serialization.cpp
@@ -72,7 +73,6 @@ set(BASE_SOURCES
   split_string.cpp
   string.cpp
   system_console.cpp
-  temp_dir.cpp
   thread.cpp
   time.cpp
   trim_string.cpp
