Add UI and logic to recover a backup session
Changes:
* Add DataRecoveryView
* Split SubObjectsIO into an interface and SubObjectsFromSprite
* Add a "setId" parameter to some doc::read_* functions (we need this
  functionality from session recovery)

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -227,8 +227,9 @@ add_library(app-lib
   context_flags.cpp
   crash/backup_observer.cpp
   crash/data_recovery.cpp
-  crash/document_io.cpp
+  crash/read_document.cpp
   crash/session.cpp
+  crash/write_document.cpp
   document.cpp
   document_api.cpp
   document_exporter.cpp
@@ -294,6 +295,7 @@ add_library(app-lib
   ui/color_sliders.cpp
   ui/configure_timeline_popup.cpp
   ui/context_bar.cpp
+  ui/data_recovery_view.cpp
   ui/devconsole_view.cpp
   ui/document_view.cpp
   ui/drop_down_button.cpp
