Add she/win/vk.cpp with win32vk_to_scancode() function

--- a/src/she/CMakeLists.txt
+++ b/src/she/CMakeLists.txt
@@ -87,6 +87,11 @@ if(USE_SKIA_BACKEND)
 
   list(APPEND SHE_SOURCES
     skia/she.cpp)
+
+  if(WIN32)
+    list(APPEND SHE_SOURCES
+      win/vk.cpp)
+  endif()
 endif()
 
 if(WIN32)
