--- a/src/net/CMakeLists.txt
+++ b/src/net/CMakeLists.txt
@@ -1,7 +1,5 @@
 # ASEPRITE
-# Copyright (C) 2001-2013  David Capello
-
-add_definitions(-DCURL_STATICLIB)
+# Copyright (C) 2001-2013, 2015  David Capello
 
 add_library(net-lib
   http_headers.cpp
