Define CURL_STATICLIB if we don't use libcurl shared version (might be related to #640)
This problem was introduced in d7bf5048877ff270f434607437180519d13ef389

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,6 +147,10 @@ if(NOT USE_SHARED_GTEST)
   endif()
 endif()
 
+if(NOT USE_SHARED_CURL)
+  set(CURL_STATICLIB ON BOOL)
+endif()
+
 ######################################################################
 # Allegro 4 backend
 
