Creating a brush with right-click clear the selected region with bg color (#154)

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -71,6 +71,7 @@ add_library(app-lib
   cmd/clear_cel.cpp
   cmd/clear_image.cpp
   cmd/clear_mask.cpp
+  cmd/clear_rect.cpp
   cmd/configure_background.cpp
   cmd/copy_cel.cpp
   cmd/copy_frame.cpp
