Add options to change palette entry size

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -203,6 +203,7 @@ add_library(app-lib
   commands/cmd_scroll.cpp
   commands/cmd_set_loop_section.cpp
   commands/cmd_set_palette.cpp
+  commands/cmd_set_palette_entry_size.cpp
   commands/cmd_sprite_properties.cpp
   commands/cmd_sprite_size.cpp
   commands/cmd_switch_colors.cpp
