Show onion skinning depending on the configured loop section (fix #555)
There is a new option (per document) to disable this behavior.

--- a/src/doc/CMakeLists.txt
+++ b/src/doc/CMakeLists.txt
@@ -29,6 +29,7 @@ add_library(doc-lib
   frame_tag.cpp
   frame_tag_io.cpp
   frame_tags.cpp
+  handle_anidir.cpp
   image.cpp
   image_io.cpp
   images_collector.cpp
