--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ env:
     - SHARED=ON
 
 before_install:
+  - if [ "$CXX" = "g++" ]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
   - sudo apt-get update -qq
   - if [ "$SHARED" == "ON" ]; then sudo apt-get install -y libcurl4-openssl-dev libgif-dev libjpeg-dev libz-dev libpng-dev libtinyxml-dev libgtest-dev libpixman-1-dev liballegro4.2-dev ; fi
   - if [ "$CXX" = "g++" ]; then sudo apt-get install -y -qq g++-4.8; fi
