Now include(CheckCXXSourceCompiles) is required in src/CMakeLists.txt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,8 @@
 # Aseprite
 # Copyright (C) 2001-2015  David Capello
 
+include(CheckCXXSourceCompiles)
+
 ######################################################################
 # Common definitions for all Aseprite libraries/projects
 
