Change net library license to MIT

--- a/src/net/CMakeLists.txt
+++ b/src/net/CMakeLists.txt
@@ -1,5 +1,5 @@
-# ASEPRITE
-# Copyright (C) 2001-2013, 2015  David Capello
+# Aseprite Network Library
+# Copyright (C) 2001-2015 David Capello
 
 add_library(net-lib
   http_headers.cpp
