Add layer blending modes (fix #318)
- Added doc::BlendMode enum and doc::BlendFunc type
- Renamed LayerImage::getBlendMode() -> blendMode()
- BLEND_MODE_COPY is BlendMode::SRC now
- BLEND_MODE_NORMAL is BlendMode::NORMAL now
- Added app::cmd::SetLayerBlendMode

--- a/src/doc/CMakeLists.txt
+++ b/src/doc/CMakeLists.txt
@@ -10,7 +10,7 @@ add_library(doc-lib
   algorithm/rotate.cpp
   algorithm/rotsprite.cpp
   algorithm/shrink_bounds.cpp
-  blend.cpp
+  blend_funcs.cpp
   brush.cpp
   cel.cpp
   cel_data.cpp
