--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -201,6 +201,7 @@ add_library(app-lib
   commands/cmd_open_with_app.cpp
   commands/cmd_options.cpp
   commands/cmd_palette_editor.cpp
+  commands/cmd_palette_size.cpp
   commands/cmd_paste.cpp
   commands/cmd_play_animation.cpp
   commands/cmd_refresh.cpp
